# isdn4k-utils

./: LEGAL.ipppcomp  Makefile  README
FAQ/: i4lfaq-de.sgml
FAQ/tutorial/: EN-i4l.sgml
act2000/: Makefile.in  act2000.h  actctrl.c  actctrl.man.in
ant-phone/: config.h.in  configure  configure.ac
ant-phone/src/: Makefile.am  Makefile.in  ant-phone.c  capiconn.c  capiconn.h  gtk.c  isdn_capi.c  isdn_capi.h  session.c  session.h
areacode/: areacode.c
areacode/make/: linux.mak  svr40.mak  watcom.mak
avmb1/: Makefile  Makefile.in  avmcapictrl.c  avmcapictrl.man.in
capi20/: Makefile.in  capi20.c  capi20.h  capidyn.c  capifunc.c  convert.c
capi20.new/: capidyn.c
capifax/: Makefile.am  c20msg.c  c20msg.h  capi.c  capi.h  capifax.c  capifaxrcvd.c  connect.c  connect.h  contr.c  contr.h  data.c  data.h  fax.c  fax.h  id.c  id.h  init.c  init.h  msg.c
capiinfo/: Makefile.am  capiinfo.8  capiinfo.c
capiinit/: Makefile.am  capiinit.c
diehl/: Makefile.in  diehlctrl.c  diehlctrl.man.in
divertctrl/: Makefile.in  divertctrl.c  divertctrl.man.in
doc/: Makefile.in  isdn_audio.man.in  isdn_cause.man.in  isdnctrl.man.in  isdninfo.man.in  ttyI.man.in
eicon/: CHANGES  Makefile.in  eiconctrl.c  eiconctrl.man.in  linuxcfg.c  linuxcfg.h
eurofile/: CHANGES  Makefile  README  README.CVS  Rules.make.in  TODO  configure.in
eurofile/doc/: FAQ  INTERWORKING  INTERWORKING.de  (+10 more)
hisax/: Makefile.in  hisaxctrl.c  hisaxctrl.man.in
icn/: Makefile.in  icn.h  icnctrl.c  icnctrl.man.in
imon/: Makefile.in  config.h.in  imon.c  imon.man.in
imontty/: Makefile  README  imontty.8.in  imontty.c  imontty.h
ipppcomp/: README.LZS  isdn_lzscomp.c
ipppd/: Makefile  Makefile.ORIG  Makefile.in  auth.c  cbcp.c  ccp.c  ccp.h  chap.c  chap.h  chap_ms.c  environ.c  environ.h  fsm.c  fsm.h  ipcp.c  ipcp.h  ipppd.8  ipppd.h  ipppd.man.in  ipxcp.c  ipxcp.h  lcp.c  lcp.h  magic.c  main.c  options.c  pathnames.h  pathnames.h.in  pppd.h  radius.c  sys-linux.c  upap.c  upap.h
ipppstats/: Makefile  Makefile.in  ipppstats.c  ipppstats.man.in
iprofd/: Makefile.in  iprofd.c  iprofd.man.in
isdnctrl/: Makefile.in  ctrlconf.c  ctrlconf.h  isdn_dwabclib.c  isdn_dwabclib.h  isdnctrl.c  isdnctrl.h  isdnctrl.man.in
isdnlog/: Makefile  Makefile.in  README.History  TelDa.Net.i  rate-de.dat.src
lib/: conffile.c  conffile.h  isdntools.c  libisdn.h  libtools.c  libtools.h
loop/: Makefile.in  isdnloop.h  loopctrl.c  loopctrl.man.in
pcbit/: Makefile.in  pcbitctl.man.in
pppdcapiplugin/: capiconn.c  capiconn.h  capiplugin.8  capiplugin.c  pppd.h  userpass.c
rcapid/: Makefile.am  capicmd.h
scripts/: Menuconfig  config.in  isdncause  makedev.sh
teles/: Makefile.in  hisaxctrl.man.in  telesctrl.man.in
ttyId/: Makefile  communicate.c  emulator.c  main.c  profile.c  pty.c  pty.h  ttyId.h  ttyId_fax.h  utils.c
vbox/: CHANGES  Makefile.in
vbox3/: Makefile.am
vbox3/doc/: .makedoc
vbox3/src/: Makefile  config.h  modem.c  modem.h  rc.c  rc.h  stringutils.h  tclscript.c  tclscript.h  vboxgetty.c  vboxgetty.h  voice.c
vbox3/vboxgetty/: Makefile.am  audio.c  audio.h  breaklist.c  config.h  control.c  control.h  libvboxmodem.c  libvboxmodem.h  lock.c  lock.h  log.c  log.h  modem.c  modem.h  rc.c  rc.h  stringutils.c  stringutils.h  tclscript.c  tclscript.h  userrc.c  userrc.h  vboxgetty.c  vboxgetty.h  vboxrc.c  vboxrc.h  voice.c  voice.h
vbox3/vboxgetty/docs/: Makefile.am
vbox3/vboxgetty/examples/: Makefile.am  vboxgetty.conf
vbox3/vboxgetty/examples/scripts/: Makefile.am  answercall.tcl  initmodem.tcl
xmonisdn/: xmonisdn.man.in
(+233 files in other folders)
