##
## $Id$
##

## GNU automake options ##################################################

AUTOMAKE_OPTIONS	= foreign

## Other directories #####################################################

SUBDIRS			= vboxgetty

## Clean & Maintenance ###################################################

CLEANFILES              = *~
MAINTAINERCLEANFILES    = configure aclocal.m4 Makefile.in config.h.in \
			  stamp-h.in
