##
## $Id$
##

## gnu automake options ###################################################

AUTOMAKE_OPTIONS	= foreign

## other directories to process ###########################################

SUBDIRS			= vboxgetty

## extra files to distribute ##############################################

EXTRA_DIST		= AUTHORS CHANGES COPYING INSTALL 

## cleanup ################################################################

CLEANFILES              = *~
MAINTAINERCLEANFILES    = configure aclocal.m4 Makefile.in config.h.in \
			  stamp-h.in
