##
## $Id$
##

## Other directories #####################################################

SUBDIRS = scripts

## Configuration to install ##############################################

sysconf_DATA	= vboxgetty.conf

EXTRA_DIST	= $(sysconf_DATA)

## Clean & Maintenance ###################################################

CLEANFILES = *~
MAINTAINERCLEANFILES = Makefile.in
